--- a/SimpleBlog/SimpleBlog.csproj
+++ b/SimpleBlog/SimpleBlog.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Blogs\" />
+  </ItemGroup>
+
 </Project>
