Scaffold blogs crud operations

--- a/SimpleBlog/appsettings.json
+++ b/SimpleBlog/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SimpleBlogContext": "Server=(localdb)\\mssqllocaldb;Database=SimpleBlogContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
